更新nettool性能测试代码，测试前创建好连接